# wotlk

./: CMakeLists.txt  README.md
conf/: mod_fishbot_detector.conf.dist
data/sql/base/db_world/: npc_text.sql  quest_request_items_locale.sql  spell_dbc.sql
data/sql/custom/db_world/: 101_rename.sql
data/sql/custom/tenstorms/: 01_quest_fix_sql  02_game_event_fix.sql  03_creature.sql  04_gameobj_fix.sql  05_item_23623_droprate.sql  06_broadcast_text_fix_cooking_dishes.sql  06_gossip_locales.sql  06_queldalar_quests_migration.sql  07_quest_ru_locale_fix.sql  08_smoldering_ruing_of_thaurissan.sql  09_isle_of_queldanas_models_fix.sql  100_BG_PVP_KILL.SQL  10_terokks_downfall.sql  11_skettis_skull_piles.sql  12_heart_shaped_box_loot.sql  13_giant_kaliri_egg_spawn.sql  14_remove_prefase_quests.sql  15_paladin_t10_spell_fix.sql  16_rogue_glyph_of_backstab.sql  20240310_skining_loot.sql  999_migration_auth.sql  99_other.sql  Shadowmourne_GCD.sql  add_missed_nerubian_chitin.sql  add_mpq_checks.sql  add_no_player_connected_locale_string.sql  argent.sql  dk_gargoyle.sql  event_ahnqiraj.sql  fix_cond_51315.sql  fix_portal_dal_to_ioc_bg.sql  quest_greeting_locale_ruRU_compilation REPLACE.sql  quest_offer_reward_locale_ruRU_compilation REPLACE.sql  quest_rename.sql  quest_request_items_locale_ruRU_compilation REPLACE.sql
modules/: CMakeLists.txt
src/: FishbotDetector.cpp
src/cmake/compiler/clang/: settings.cmake
src/common/Utilities/: Util.cpp  Util.h
src/server/apps/worldserver/: Main.cpp  (+1 more)
src/server/game/: CMakeLists.txt
src/server/scripts/: CMakeLists.txt
(+110 files in other folders)
